durum: update site.css (fix display issues on small screens)
Fix display issues on small screen devices by properly centering the
display.

Hosts: O:durum

--- a/modules/profile/files/durum/site.css
+++ b/modules/profile/files/durum/site.css
@@ -1,7 +1,7 @@
 section {
   text-align: center;
   position: absolute;
-  top: 25%;
+  top: 50%;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
